[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"
